--- a/Java基础与框架/微服务.md
+++ b/Java基础与框架/微服务.md
@@ -158,10 +158,12 @@ POST 在服务器新建一个资源
 
 **5.使用标准的状态码**
 
-## GET
+##### GET
 
 - 安全且幂等
+
 - 获取表示
+
 - 变更时获取表示（缓存）
 
 - 200（OK） - 表示已在响应中发出
@@ -184,75 +186,64 @@ POST 在服务器新建一个资源
 
 - 503 （Service Unavailable）- 服务端当前无法处理请求
 
-- ## POST
+    ##### POST
 
-  - 不安全且不幂等
-  - 使用服务端管理的（自动产生）的实例号创建资源
-  - 创建子资源
-  - 部分更新资源
-  - 如果没有被修改，则不过更新资源（乐观锁）
+    - 不安全且不幂等
+    - 使用服务端管理的（自动产生）的实例号创建资源
+    - 创建子资源
+    - 部分更新资源
+    - 如果没有被修改，则不过更新资源（乐观锁）
 
-  - 200（OK）- 如果现有资源已被更改
+    - 200（OK）- 如果现有资源已被更改
 
-  - 201（created）- 如果新资源被创建
-  - 202（accepted）- 已接受处理请求但尚未完成（异步处理）
-  - 301（Moved Permanently）- 资源的URI被更新
-  - 303（See Other）- 其他（如，负载均衡）
-  - 400（bad request）- 指代坏请求
-  - 404 （not found）- 资源不存在
-  - 406 （not acceptable）- 服务端不支持所需表示
-  - 409 （conflict）- 通用冲突
-  - 412 （Precondition Failed）- 前置条件失败（如执行条件更新时的冲突）
-  - 415 （unsupported media type）- 接受到的表示不受支持
-  - 500 （internal server error）- 通用错误响应
-  - 503 （Service Unavailable）- 服务当前无法处理请求
+    - 201（created）- 如果新资源被创建
+    - 202（accepted）- 已接受处理请求但尚未完成（异步处理）
+    - 301（Moved Permanently）- 资源的URI被更新
+    - 303（See Other）- 其他（如，负载均衡）
+    - 400（bad request）- 指代坏请求
+    - 404 （not found）- 资源不存在
+    - 406 （not acceptable）- 服务端不支持所需表示
+    - 409 （conflict）- 通用冲突
+    - 412 （Precondition Failed）- 前置条件失败（如执行条件更新时的冲突）
+    - 415 （unsupported media type）- 接受到的表示不受支持
+    - 500 （internal server error）- 通用错误响应
+    - 503 （Service Unavailable）- 服务当前无法处理请求
 
-  ## PUT
+    ##### PUT
 
-  - 不安全但幂等
-  - 用客户端管理的实例号创建一个资源
-  - 通过替换的方式更新资源
-  - 如果未被修改，则更新资源（乐观锁）
+    - 不安全但幂等
+    - 用客户端管理的实例号创建一个资源
+    - 通过替换的方式更新资源
+    - 如果未被修改，则更新资源（乐观锁）
 
-  - 200 （OK）- 如果已存在资源被更改
+    - 200 （OK）- 如果已存在资源被更改
 
-  - 201 （created）- 如果新资源被创建
-  - 301（Moved Permanently）- 资源的URI已更改
-  - 303 （See Other）- 其他（如，负载均衡）
-  - 400 （bad request）- 指代坏请求
-  - 404 （not found）- 资源不存在
-  - 406 （not acceptable）- 服务端不支持所需表示
-  - 409 （conflict）- 通用冲突
-  - 412 （Precondition Failed）- 前置条件失败（如执行条件更新时的冲突）
-  - 415 （unsupported media type）- 接受到的表示不受支持
-  - 500 （internal server error）- 通用错误响应
-  - 503 （Service Unavailable）- 服务当前无法处理请求
+    - 201 （created）- 如果新资源被创建
+    - 301（Moved Permanently）- 资源的URI已更改
+    - 303 （See Other）- 其他（如，负载均衡）
+    - 400 （bad request）- 指代坏请求
+    - 404 （not found）- 资源不存在
+    - 406 （not acceptable）- 服务端不支持所需表示
+    - 409 （conflict）- 通用冲突
+    - 412 （Precondition Failed）- 前置条件失败（如执行条件更新时的冲突）
+    - 415 （unsupported media type）- 接受到的表示不受支持
+    - 500 （internal server error）- 通用错误响应
+    - 503 （Service Unavailable）- 服务当前无法处理请求
 
-  ## DELETE
+    ##### DELETE
 
-  - 不安全但幂等
-  - 删除资源
+    - 不安全但幂等
+    - 删除资源
 
-  - 200 （OK）- 资源已被删除
+    - 200 （OK）- 资源已被删除
 
-  - 301 （Moved Permanently）- 资源的URI已更改
-  - 303 （See Other）- 其他，如负载均衡
-  - 400 （bad request）- 指代坏请求
-  - 404 （not found）- 资源不存在
-  - 409 （conflict）- 通用冲突
-  - 500 （internal server error）- 通用错误响应
-  - 503 （Service Unavailable）- 服务端当前无法处理请求
+    - 301 （Moved Permanently）- 资源的URI已更改
+    - 303 （See Other）- 其他，如负载均衡
+    - 400 （bad request）- 指代坏请求
+    - 404 （not found）- 资源不存在
+    - 409 （conflict）- 通用冲突
+    - 500 （internal server error）- 通用错误响应
+    - 503 （Service Unavailable）- 服务端当前无法处理请求
 
-- **6.选择适当的表示结构**
+    
 
-  json  xml
-
-   
-
-  **7. 版本控制**
-
-  例如：![img](https://images2018.cnblogs.com/blog/1327924/201806/1327924-20180628134227185-490970060.png)
-
-
-
-hello world!!!
