--- a/Java Structures/实习面试问题.md
+++ b/Java Structures/实习面试问题.md
@@ -1,4 +1,4 @@
-#### 腾讯后端一面
+#### 腾讯深圳后端零面
 
 1.编写一个 SQL 查询，查找 Person 表中所有重复的电子邮箱。
 
@@ -138,7 +138,7 @@ HAVING
 
 
 
-#### 腾讯后端二面
+#### 腾讯深圳后端一面
 
 1.自我介绍
 
@@ -195,7 +195,25 @@ public static void InOrder(TreeNode root) {
 
 
 
-#### 腾讯后端三面
+#### 腾讯深圳后端二面
+
+1.先做一下自我介绍（主要讲了实验项目与科研内容）；
+
+2.讲一个比较有代表性项目介绍一下？
+
+- 最近的办公文件优化项目，文件分类系统的研发（属性特征分析），第一个版本部署上线；
+- 详细说一下项目内容：文件分类模块设计，文件属性分析（时间戳，特征，来源等），训练模型（RF，没用MLP因为慢，增量模型），效果（85的召回率，80左右的F1值）；
+- 还有什么特征？（文件内容中初始段落中前500字符串到W2V的转换，考虑到每个文件长度不一，且容易过拟合，故设置了阈值）；
+- 项目几个人做的，怎么分工，效果怎么考察？（本人主要是算法设计，基于Java来做的，用的是weka api包的，留验证集）；
+- 效果够好吗，有多少特征，怎样改进？（20多个，特征选择不够，数据集获取不足）；
+- 这些文件从自己的视角能辨别出重要的文件吗？（txt）;
+- 老家在哪，什么时候可以来实习？（研二，没开学，差不多2-3个月）；
+
+3.有什么问题？（1.应用宝部门实习能学习到哪些知识；2.不着急深挖，先了解整体框架；3.留用率如何？项目组内整体实习生留用率大于50%，岗位述职的指导，为项目组积累财富等等）。
+
+
+
+#### 腾讯深圳后端三面
 
 1.自我介绍一下；
 
@@ -223,11 +241,11 @@ public static void InOrder(TreeNode root) {
 
 10.作为一个后端工程师应该有什么思维和职责，自己的理想与现存的差距？（①负责任；②不能局限于现有性能，故障预见性；③与其他部门的合作，不闭门造车）（基础较为扎实，高并发等知识还是欠缺，希望能够提高）；
 
-11.有什么问题要问？（1.PCG部门的优势与能带给学习者的提升是什么；2.）
+11.有什么问题要问？（1.PCG部门的优势与能带给学习者的提升是什么；2.腾讯事业群的划分与相互合作；）
 
 
 
-#### 美团后端一面
+#### 美团上海后端一面
 
 1.自我介绍
 
@@ -261,7 +279,7 @@ public static void InOrder(TreeNode root) {
 
 
 
-#### 美团后端二面
+#### 美团上海后端二面
 
 1.自我介绍+想去哪里实习
 
@@ -282,3 +300,70 @@ public static void InOrder(TreeNode root) {
 9.怎么判断一个链表上是否有环？（标记重访问法）；
 
 10.提一两个问题：①哪个部门？美团到店部门；②部门主要优势与高并发场景的应用（时间紧张就没谈，就结束了，说以后再聊）。
+
+
+
+#### 字节杭州data一面
+
+1.介绍一下智慧教育系统的整体情况（2分钟简单介绍）；
+
+2.Java并发中volatile关键字与syncronized关键字的主要区别（对象，区别）；
+
+- volitile会导致的两个特性：①可见性 ②禁止重排序；
+- 还有什么情况会导致禁止重排序？（答了同步）；
+
+3.Java并发容器ConcurrentHashMap与hashmap的主要区别？（两者同步与不同步的性质，前者的实现原理）
+
+4.读写锁的分类与实现？（答的是乐观锁与悲观锁，CAS与Syn, 偏向锁，可重入锁，感觉说的不太对。。）；
+
+- ReadWriteLock的实现原理，当有10个读锁时，写者会怎样；
+
+5.MySQL当中乐观锁与悲观锁的使用时机？（读乐观写悲观）；
+
+6.对分布式有哪些了解，结合springboot谈一下认识？（功能解耦，提高并发，主要用的zookeeper架构）；
+
+- zookeeper原语有什么了解？抽象成一个事件？（不懂，跳过）；
+- 分布一致性实现的原理，同步方式？（提示了选举，角色的情况，答得不好）；
+- 消息队列用过吗，用的什么？（Kafka）；
+
+7.对nosql数据库了解吗？（说对Redis较了解，讲一下Redis的过期策略，可能混淆了过期与内存数据淘汰策略）；
+
+8.对Redis设计模式了解吗？（不了解）；对Redis的模式了解吗？（主从模式，从从模式）；
+
+9.编程：LeetCode 45题，提前没看过，唉！
+
+
+
+#### 阿里杭州后端一面
+
+1.面试官自我介绍（服务供应链部门）；
+
+2.Java技术栈学了几年，在外面实习过吗？（两年多，在成都，实习过）；
+
+3.Java线程的状态主要有几种？（可运行，等待与超时等待，阻塞，创建终止态）；
+
+4.多线程中中断什么时候会发生？（有点模糊）线程的sleep（）与wait（）区别？（自发唤醒与外部唤醒）
+
+5.怎样创建一个线程？创建线程池构造函数的主要参数？（介绍四种方法）（核心线程数，最大线程数，空闲线程存活时间，阻塞队列，饱和处理策略）；
+
+6.如果线程池核心数为10已满，新线程到队列当中会怎样？（队列满会新增线程）；
+
+7.数据库MySQL存储主要有哪些引擎，两者分别由什么数据结构实现？（场景，事务，数据结构有点答不上来）；
+
+8.对B树语B+树有什么了解与区别？（叶子节点在分支节点中是否有冗余，效率后者更高）；B+树采用什么算法进行查找？（定位方式，这块还不太清楚）；对数据库索引了解多吗？（不多）；
+
+9.SpringBoot的原理是什么？（主要还是谈了IOC和AOP，进一步要求解释一下IOC是怎样实现的，starter是怎样加载怎样实现的，答基于反射思想，自动关联配置与映射）；使用过哪些组件？（beautifulsoup, log4j, slf4j, elsticsearch, mangodb等）；springCLOUD有没有用过？（没有用过）；
+
+10.具体说一下Redis支持哪些数据类型（string，hash，set, zset）? zest是怎么实现的？（这个不太懂）是否有序无序是怎么决定的（创建时候就需要考虑）？
+
+11.用过哪些map的实现（hashmap, concurrenthashmap, treemap）? concurrenthashmap怎样实现同步与线程安全的？（分段加可重入锁）？concurrenthashmap底层用哪些数据结构（数组+连表+红黑树）；
+
+12.红黑树的特征记得吗？（五大特征）红黑树的平衡策略？
+
+13.分布式这块了解哪些服务？（用zookeeper这种服务）；用过zookeeper的哪些服务（主从同步，负载均衡，分布式锁）；
+
+14.消息队列用过哪些？（用过Kafka，主要在日志中使用，底层实现还不太特别了解）。
+
+15.网络编程中select, poll, epoll的具体了解有哪些？（不太了解）；
+
+ 16.有什么问题？（1.学习能力还是有，部门有什么优点；2.阿里部门有什么？）；
