--- a/Java Structures/实习面经.md
+++ b/Java Structures/实习面经.md
@@ -371,3 +371,37 @@ public static void InOrder(TreeNode root) {
 15.网络编程中select, poll, epoll的具体了解有哪些？（不太了解）；
 
  16.有什么问题？（1.学习能力还是有，部门有什么优点；2.阿里部门有什么？）；
+
+
+
+#### 阿里云杭州一面 4月8日 电话面
+
+1.自我介绍
+
+2.写代码，Java语言，写一个二分查找的代码；
+
+3.讲一个遇到问题克服问题的经历；
+
+4.TCP/IP网络拥塞控制的过程；
+
+5.操作系统的存储系统（从磁盘到缓存）；
+
+6.Java的字符串处理的类，string，stringbuffer，stringbuilder
+
+7.Java的GC机制清楚吗，介绍一下，系统上线后重点关注GC的哪些特征？（堆大小，策略）
+
+8.在项目中为什么选择使用Redis这样的缓存中间价？
+
+9.有什么想问的嘛？（1.项目组能带给实习生的成长；2.项目组的主要研究项目）
+
+
+
+
+
+#### 微软SWE一面 4月8日 teams
+
+1.代码题，将IPv4地址进行格式判断并转为int类型，考虑格式错误情况并进行异常输入
+
+2.如果用户在登录界面卡圈圈时间较长，会是什么原因？（从用户端，服务端两侧进行分析）
+
+3.如何优化服务器运行？（从网络带宽，缓存，持久化存储，消息队列等方向分析）
