--- a/Java Structures/算法/排序.md
+++ b/Java Structures/算法/排序.md
@@ -13,36 +13,38 @@ public void bubbleSort(int array[]) {
 					array[j + 1] = t;
 				}
 	}
-```
 
- private static <T extends Comparable<? super T>> void bubbleSort(T[] nums) {
+private static <T extends Comparable<? super T>> void bubbleSort(T[] nums) {
     if (null == nums || nums.length == 0) {
       throw new RuntimeException("数组为null或长度为0");
     }
 
-​    T temp = null;
-​    int length = nums.length;
-​    //用于标识是否已经将序列排好序
-​    boolean isOrdered = false;
-​    for (int i = 0; i < length - 1; i++) {
-​      //每一趟开始前都假设已经有序
-​      isOrdered = true;
-​      for (int j = 0; j < length - 1 - i; j++) {
-​        if (nums[j].compareTo(nums[j + 1]) > 0) {
-​          temp = nums[j];
-​          nums[j] = nums[j + 1];
-​          nums[j + 1] = temp;
-​          //如果出现有元素交换，则表明此躺可能没有完成排序
-​          isOrdered = false;
-​        }
-​      }
-​      //如果当前趟都没有进行元素的交换，证明前面一趟比较已经排好序
-​      //直接跳出循环
-​      if (isOrdered) {
-​        break;
-​      }
-​    }
+    T temp = null;
+    int length = nums.length;
+    //用于标识是否已经将序列排好序
+    boolean isOrdered = false;
+    for (int i = 0; i < length - 1; i++) {
+      //每一趟开始前都假设已经有序
+      isOrdered = true;
+      for (int j = 0; j < length - 1 - i; j++) {
+        if (nums[j].compareTo(nums[j + 1]) > 0) {
+          temp = nums[j];
+          nums[j] = nums[j + 1];
+          nums[j + 1] = temp;
+          //如果出现有元素交换，则表明此躺可能没有完成排序
+          isOrdered = false;
+        }
+      }
+      //如果当前趟都没有进行元素的交换，证明前面一趟比较已经排好序
+      //直接跳出循环
+      if (isOrdered) {
+        break;
+      }
+    }
   }
+```
+
+ 
 
 
 
