--- a/Java Structures/算法/位运算技巧.md
+++ b/Java Structures/算法/位运算技巧.md
@@ -4,9 +4,11 @@
 
 如果把 n 以二进制的形式展示的话，其实我们只需要判断最后一个二进制位是 1 还是 0 就行了，如果是 1 的话，代表是奇数，如果是 0 则代表是偶数，所以采用位运算的方式的话，代码如下：
 
+```
 if(n & 1 == 1){
 
-​    // n 是个奇数。 }
+    // n 是个奇数。 }
+```
 
 
 
@@ -14,14 +16,22 @@ if(n & 1 == 1){
 
 交换两个数相信很多人天天写过，我也相信你每次都会使用一个额外来变量来辅助交换，例如，我们要交换 x 与 y 值，传统代码如下：
 
+```
 int tmp = x;
 x = y;
 y = tmp;
+```
+
+
 这样写有问题吗？没问题，通俗易懂，万一哪天有人要为难你，**不允许你使用额外的辅助变量来完成交换呢？**你还别说，有人面试确实被问过，这个时候，位运算大法就来了。代码如下：
 
+```
 x = x ^ y   // （1）
 y = x ^ y   // （2）
 x = x ^ y   // （3）
+```
+
+
 我靠，牛逼！三个都是 x ^ y，就莫名交换成功了。在此我解释下吧，我们知道，两个相同的数异或之后结果会等于 0，即 n ^ n = 0。并且任何数与 0 异或等于它本身，即 n ^ 0 = n。所以，解释如下：
 
 把（1）中的 x 带入 （2）中的 x，有
@@ -51,6 +61,7 @@ x = x^y = (xy)x = (xx)y = 0^y = y。
 
 也就是说，那些出现了两次的数异或之后会变成0，那个出现一次的数，和 0 异或之后就等于它本身。就问这个解法牛不牛逼？所以代码如下
 
+```
 int find(int[] arr){
     int tmp = arr[0];
     for(int i = 1;i < arr.length; i++){
@@ -58,6 +69,9 @@ int find(int[] arr){
     }
     return tmp;
 }
+```
+
+
 时间复杂度为 O(n)，空间复杂度为 O(1)，而且看起来很牛逼。
 
 
@@ -66,6 +80,7 @@ int find(int[] arr){
 
 如果让你求解 m 的 n 次方，并且不能使用系统自带的 pow 函数，你会怎么做呢？这还不简单，连续让 n 个 m 相乘就行了，代码如下：
 
+```
 int pow(int n){
     int tmp = 1;
     for(int i = 1; i <= n; i++) {
@@ -73,6 +88,9 @@ int pow(int n){
     }
     return tmp;
 }
+```
+
+
 不过你要是这样做的话，我只能呵呵，时间复杂度为 O(n) 了，怕是小学生都会！如果让你用位运算来做，你会怎么做呢？
 
 我举个例子吧，例如 n = 13，则 n 的二进制表示为 1101, 那么 m 的 13 次方可以拆解为:
@@ -81,6 +99,7 @@ m^1101 = m^0001 * m^0100 * m^1000。
 
 我们可以通过 & 1和 >>1 来逐位读取 1101，为1时将该位代表的乘数累乘到最终结果。直接看代码吧，反而容易理解：
 
+```
 int pow(int n){
     int sum = 1;
     int tmp = m;
@@ -91,9 +110,11 @@ int pow(int n){
         tmp *= tmp;
         n = n >> 1;
     }
-    
     return sum;
 }
+```
+
+
 时间复杂度近为 O(logn)，而且看起来很牛逼。
 
 这里说一下，位运算很多情况下都是很二进制扯上关系的，所以我们要判断是否是否位运算，很多情况下都会把他们拆分成二进制，然后观察特性，或者就是利用与，或，异或的特性来观察，总之，我觉得多看一些例子，加上自己多动手，就比较容易上手了。所以呢，继续往下看，注意，先别看答案，先看看自己会不会做。
