--- a/Java Structures/实习面经.md
+++ b/Java Structures/实习面经.md
@@ -405,3 +405,78 @@ public static void InOrder(TreeNode root) {
 2.如果用户在登录界面卡圈圈时间较长，会是什么原因？（从用户端，服务端两侧进行分析）
 
 3.如何优化服务器运行？（从网络带宽，缓存，持久化存储，消息队列等方向分析）
+
+
+
+#### 阿里云数据库管控平台部杭州二面 5月16日 
+
+1.自我介绍，项目经验，如何做优化，特征工程和机器学习怎样结合
+
+2.介绍一下数据库事务是怎样实现的：底层，通过提交点和日志实现（redo,undo）；
+
+3.服务器标示400系列和500系列有什么区别；
+
+4.SQL注入是什么，怎样预防和处理？
+
+5.有什么问题？提升；在做什么？
+
+
+
+
+
+#### 字节游戏测试开发岗位面试 5-18日
+
+1.讲一下项目的情况
+
+2.Java虚拟机的内存结构
+
+3.数据库innodb的索引底层实现是什么数据结构？
+
+4.为什么用B+树而不用二叉树？
+
+5.Java线程同步用什么方法？有没有用过park和unpark?
+
+编程题：
+
+翻转数组后查找是否存在
+
+8， 10， 11， 1， 3， 4， 7
+
+​	8， true
+
+​	9， false
+
+时间复杂度在O(lgn)
+
+```
+import java.util.Scanner;
+public class Main {
+    public static void main(String[] args) {
+        int[] array = new int[]{8,10,11,1,3,4,7 };
+        int p1 = 9;
+        int p2 = 3;
+        boolean b1 = isExist(array,p1);
+        boolean b2 = isExist(array,p2);
+        System.out.println(b1+" "+b2);
+    }
+    
+
+    public static boolean isExist(int[] array, int p){
+        int temp = binarySearch(array,0,array.length-1,p);
+        if(temp == -1) return false;
+        return true;
+    }
+    
+    public static int binarySearch(int[] array,int start, int end,int p){
+        int middle = (start+end)/2;
+        if(p == array[middle]) return middle;
+        if(array[middle]< array[start]){
+            binarySearch(Arrays.copyOfRange(middle+1,end),middle+1,end,p);
+        }else if(array[middle] > array[end]){
+            binarySearch(Arrays.copyOfRange(start,middle-1),start,middle-1,p);
+        }
+        return -1;
+    }
+}
+```
+
