--- a/Java Structures/实习面经.md
+++ b/Java Structures/实习面经.md
@@ -436,6 +436,10 @@ public static void InOrder(TreeNode root) {
 
 5.Java线程同步用什么方法？有没有用过park和unpark?
 
+6.介绍一下双亲委派模型，这样做的优势是什么？
+
+7.熟悉动态代理吗？介绍一下
+
 编程题：
 
 翻转数组后查找是否存在
