--- a/Java Structures/实习面经.md
+++ b/Java Structures/实习面经.md
@@ -426,7 +426,13 @@ public static void InOrder(TreeNode root) {
 
 1.介绍一下自己的项目
 
-2.
+2.办公OA项目的具体做法
+
+3.yotta系统开发中遇到的问题，怎么解决的
+
+4.为什么不用CDN
+
+5.GitHub上的工程都是干嘛的
 
 
 
@@ -439,6 +445,10 @@ public static void InOrder(TreeNode root) {
 3.讲一个自己学习开发过程中的最大困难，以及自己解决这个问题的方法和成长？
 
 4.讲一下自己的身上有什么缺点？同学老师最大的负面评价是什么？
+
+5.阿里加班情况很严重，对此你怎么看？
+
+6.数据库部门和之前的学习差异较大，如何克服这些困难？
 
 
 
