--- a/Java Structures/学习路线/Java后端学习路线-2020.md
+++ b/Java Structures/学习路线/Java后端学习路线-2020.md
@@ -147,23 +147,23 @@ Nginx
 
 ![img](https://tva1.sinaimg.cn/large/0082zybply1gca2xow3fwj30qf08mt9j.jpg)
 
-数据库可能是整个系统中最值钱的部分了，在我码文字的前一天，刚好发生了微盟程序员删库跑路的操作，删库跑路其实是我们在网上最常用的笑话，没想到还是照进了现实。
+​		数据库可能是整个系统中最值钱的部分了，在我码文字的前一天，刚好发生了微盟程序员删库跑路的操作，删库跑路其实是我们在网上最常用的笑话，没想到还是照进了现实。
 
-这里也提一点点吧，36小时的故障，其实在互联网公司应该是个笑话了吧，权限控制没做好类似**rm -rf 、fdisk、drop**等等这样的高危命令是可以实时拦截掉的，**备份，全量备份，增量备份，延迟备份，异地容灾**全部都考虑一下应该也不至于这样，一家上市公司还是有点点不应该。
+​		这里也提一点点吧，36小时的故障，其实在互联网公司应该是个笑话了吧，权限控制没做好类似**rm -rf 、fdisk、drop**等等这样的高危命令是可以实时拦截掉的，**备份，全量备份，增量备份，延迟备份，异地容灾**全部都考虑一下应该也不至于这样，一家上市公司还是有点点不应该。
 
 ![img](https://tva1.sinaimg.cn/large/0082zybply1gca2xzrftyj30u406dwf6.jpg)
 
-数据库基本的事务隔离级别，索引，SQL，主被同步，读写分离等都可能是你学的时候要了解到的。
+​		数据库基本的事务隔离级别，索引，SQL，主被同步，读写分离等都可能是你学的时候要了解到的。
 
-上面我们提到了安全，不要把鸡蛋放一个篮子的道理大家应该都知道，那分库的意义就很明显了，然后你会发现时间久了表的数据大了，就会想到去接触分表，什么TDDL、Sharding-JDBC、DRDS这些插件都会接触到。
+​		上面我们提到了安全，不要把鸡蛋放一个篮子的道理大家应该都知道，那分库的意义就很明显了，然后你会发现时间久了表的数据大了，就会想到去接触分表，什么TDDL、Sharding-JDBC、DRDS这些插件都会接触到。
 
-你发现流量大的时候，或者热点数据打到数据库还是有点顶不住，压力太大了，那非关系型数据库就进场了，Redis当然是首选，但是MongoDB、memcache也有各自的应用场景。
+​		你发现流量大的时候，或者热点数据打到数据库还是有点顶不住，压力太大了，那非关系型数据库就进场了，Redis当然是首选，但是MongoDB、memcache也有各自的应用场景。
 
-Redis使用后，真香，真快，但是你会开始担心最开始提到的安全问题，这玩意快是因为在内存中操作，那断点了数据丢了怎么办？你就开始阅读官方文档，了解RDB，AOF这些持久化机制，线上用的时候还会遇到缓存雪崩击穿、穿透等等问题。
+​		Redis使用后，真香，真快，但是你会开始担心最开始提到的安全问题，这玩意快是因为在内存中操作，那断点了数据丢了怎么办？你就开始阅读官方文档，了解RDB，AOF这些持久化机制，线上用的时候还会遇到缓存雪崩击穿、穿透等等问题。
 
-单机不满足你就用了，他的集群模式，用了集群可能也担心集群的健康状态，所以就得去了解哨兵，他的主从同步，时间久了Key多了，就得了解内存淘汰机制……
+​		单机不满足你就用了，他的集群模式，用了集群可能也担心集群的健康状态，所以就得去了解哨兵，他的主从同步，时间久了Key多了，就得了解内存淘汰机制……
 
-他的大容量存储有问题，你可能需要去了解Pika….
+​		他的大容量存储有问题，你可能需要去了解Pika….
 ![img](https://tva1.sinaimg.cn/large/0082zybply1gca8hgck8uj30rq0lytl2.jpg)
 
 
@@ -188,17 +188,17 @@ Redis使用后，真香，真快，但是你会开始担心最开始提到的安
 
 ![image-20200302151037344](/Users/xiaoxiangyuzhu/Library/Application Support/typora-user-images/image-20200302151037344.png)
 
-等你把几种关系型非关系型数据库的知识点，整理清楚后，你会发现数据还是大啊，而且数据的场景越来越多多样化了，那大数据的各种中间件你就得了解了。
+​		等你把几种关系型非关系型数据库的知识点，整理清楚后，你会发现数据还是大啊，而且数据的场景越来越多多样化了，那大数据的各种中间件你就得了解了。
 
-你会发现很多场景，不需要实时的数据，比如你查你的支付宝去年的，上个月的账单，这些都是不会变化的数据，没必要实时，那你可能会接触像**ODPS这样的中间件**去做数据的离线分析。
+​		你会发现很多场景，不需要实时的数据，比如你查你的支付宝去年的，上个月的账单，这些都是不会变化的数据，没必要实时，那你可能会接触像**ODPS这样的中间件**去做数据的离线分析。
 
-然后你可能会接触**Hadoop**系列相关的东西，比如于Hadoop（HDFS）的一个数据仓库工具**Hive**，是建立在 Hadoop 文件系统之上的分布式面向列的数据库HBase 。
+​		然后你可能会接触**Hadoop**系列相关的东西，比如于Hadoop（HDFS）的一个数据仓库工具**Hive**，是建立在 Hadoop 文件系统之上的分布式面向列的数据库HBase 。
 
-写多的场景，适合做一些简单查询，用他们又有点大材小用，那**Cassandra**就再合适不过了。
+​		写多的场景，适合做一些简单查询，用他们又有点大材小用，那**Cassandra**就再合适不过了。
 
-离线的数据分析没办法满足一些实时的常见，类似风控，那Flink你也得略知一二，他的窗口思想还是很有意思。
+​		离线的数据分析没办法满足一些实时的常见，类似风控，那Flink你也得略知一二，他的窗口思想还是很有意思。
 
-数据接触完了，计算引擎Spark你是不是也不能放过……
+​		数据接触完了，计算引擎Spark你是不是也不能放过……
 
 
 
@@ -215,11 +215,11 @@ Redis使用后，真香，真快，但是你会开始担心最开始提到的安
 
 ![img](https://tva1.sinaimg.cn/large/0082zybply1gca3dupq1wj30ws0goady.jpg)
 
-传统关系型数据库和NoSQL非关系型数据都没办法解决一些问题，比如我们在百度，淘宝搜索东西的时候，往往都是几个关键字在一起一起搜索东西的，在数据库除非把几次的结果做交集，不然很难去实现。
+​		传统关系型数据库和NoSQL非关系型数据都没办法解决一些问题，比如我们在百度，淘宝搜索东西的时候，往往都是几个关键字在一起一起搜索东西的，在数据库除非把几次的结果做交集，不然很难去实现。
 
-那全文检索引擎就诞生了，解决了搜索的问题，你得思考怎么把数据库的东西实时同步到ES中去，那你可能会思考到logstash去定时跑脚本同步，又或者去接触伪装成一台MySQL从服务的Canal，他会去订阅MySQL主服务的binlog，然后自己解析了去操作Es中的数据。
+​		那全文检索引擎就诞生了，解决了搜索的问题，你得思考怎么把数据库的东西实时同步到ES中去，那你可能会思考到logstash去定时跑脚本同步，又或者去接触伪装成一台MySQL从服务的Canal，他会去订阅MySQL主服务的binlog，然后自己解析了去操作Es中的数据。
 
-这些都搞定了，那可视化的后台查询又怎么解决呢？Kibana，他他是一个可视化的平台，甚至对Es集群的健康管理都做了可视化，很多公司的日志查询系统都是用它做的。
+​		这些都搞定了，那可视化的后台查询又怎么解决呢？Kibana，他他是一个可视化的平台，甚至对Es集群的健康管理都做了可视化，很多公司的日志查询系统都是用它做的。
 
 
 
@@ -236,3 +236,4 @@ Redis使用后，真香，真快，但是你会开始担心最开始提到的安
 ### 学习总路线
 
 ![00831rSTly1gcbee53k7gj30u0149dov](/Users/xiaoxiangyuzhu/Documents/LearningExperience/00831rSTly1gcbee53k7gj30u0149dov.jpg)
+
