--- a/Java Structures/实习面经.md
+++ b/Java Structures/实习面经.md
@@ -1,6 +1,6 @@
 #### 腾讯深圳后端零面  3月5日 视频面
 
-1.编写一个 SQL 查询，查找 Person 表中所有重复的电子邮箱。
+##### 1.编写一个 SQL 查询，查找 Person 表中所有重复的电子邮箱。
 
 示例：
 +----+---------+
@@ -35,13 +35,13 @@ HAVING
     count(email) > 1;
 ```
 
-2.对于给定的域名A和B，判断A是否为B的子域名。
+##### 2.对于给定的域名A和B，判断A是否为B的子域名。
 
 输入 "123.qq.com", "qq.com" 输出：yes
 
 借助两个栈，对比出栈数据是否一致，若B栈已经出完，且A栈栈顶为'.' 则表明是 
 
-3.判断一个数是否为奇数
+##### 3.判断一个数是否为奇数
 
 给定一个数N，判断其是否为奇数。
 
@@ -59,7 +59,7 @@ HAVING
 
 用求余的方法
 
-4.数值转换为字符串并增加千位分隔符
+##### 4.数值转换为字符串并增加千位分隔符
 
 将数值转换为字符串并增加千位分隔符
 
@@ -91,7 +91,7 @@ HAVING
 10,000,000,000
 ```
 
-5.两两配对
+##### 5.两两配对
 
 小Q有M(M为偶数)名员工, 第i名员工完成工作的时候有一个拖延时间值![t_i](/Users/xiaoxiangyuzhu/Pictures/Typora%20Images/equation)。
 现在小Q手里有M/2份工作需要完成, 每一份工作都需要安排两名员工参与, 对于第i份工作所需完成的时间为两名员工的拖延时间值总和。
