--- a/Java Structures/算法/递归算法分析.md
+++ b/Java Structures/算法/递归算法分析.md
@@ -155,7 +155,7 @@ f(n) = n * f(n-1)。
 
 **1、定义递归函数功能**
 
-假设函数 reverseList(head) 的功能是反转但链表，其中 head 表示链表的头节点。代码如下：
+假设函数 reverseList(head) 的功能是反转单链表，其中 head 表示链表的头节点。代码如下：
 
 ```
 1Node reverseList(Node head){
