--- a/Java Structures/102-实习面经.md
+++ b/Java Structures/102-实习面经.md
@@ -468,7 +468,57 @@ public static void InOrder(TreeNode root) {
 
 6.介绍一下双亲委派模型，这样做的优势是什么？
 
+​		双亲委派模式是在Java 1.2后引入的，其工作原理的是，如果一个类加载器收到了类加载请求，它并不会自己先去加载，而是把这个请求委托给父类的加载器去执行，如果父类加载器还存在其父类加载器，则进一步向上委托，依次递归，请求最终将到达顶层的启动类加载器，如果父类加载器可以完成类加载任务，就**成功返回**，倘若父类加载器无法完成此加载任务，**子加载器才会尝试自己去加载**，这就是双亲委派模式
+
+​		 双亲委派模式优势
+
+- 采用双亲委派模式的是好处是Java类随着它的类加载器一起具备了一种**带有优先级的层次关系**，通过这种层级关可以**避免类的重复加载**，当父亲已经加载了该类时，就没有必要子ClassLoader再加载一次。
+- 其次是考虑到安全因素，java核心api中定义类型不会被随意替换，假设通过网络传递一个名为java.lang.Integer的类，通过双亲委托模式传递到启动类加载器，而启动类加载器在核心Java API发现这个名字的类，发现该类已被加载，并不会重新加载网络传递的过来的java.lang.Integer，而直接返回已加载过的Integer.class，这样便可以**防止核心API库被随意篡改**。
+- 可能你会想，如果我们在classpath路径下自定义一个名为java.lang.SingleInterge类(该类是胡编的)呢？该类并不存在java.lang中，经过双亲委托模式，传递到启动类加载器中，由于父类加载器路径下并没有该类，所以不会加载，将反向委托给子类加载器加载，最终会通过系统类加载器加载该类。但是这样做是不允许，因为**java.lang是核心API包**，需要访问权限，强制加载将会报出如下异常
+
 7.熟悉动态代理吗？介绍一下
+
+​		代理模式是常用的java设计模式，他的特征是代理类与委托类有同样的接口，代理类主要负责为委托类预处理消息、过滤消息、把消息转发给委托类，以及事后处理消息等。
+
+​		静态代理：由程序员创建或特定工具自动生成源代码，也就是在编译时就已经将接口，被代理类，代理类等确定下来。在程序运行之前，代理类的.class文件就已经生成。
+
+​		 代理类在程序运行时创建的代理方式被成为动态代理。 利用反射机制在运行时创建代理类。接口、被代理类不变，我们构建一个handler类来实现InvocationHandler接口。
+
+```
+public class ProxyHandler implements InvocationHandler{
+    private Object object;
+    public ProxyHandler(Object object){
+        this.object = object;
+    }
+    @Override
+    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+        System.out.println("Before invoke "  + method.getName());
+        method.invoke(object, args);
+        System.out.println("After invoke " + method.getName());
+        return null;
+    }
+}
+```
+
+通过Proxy类的静态方法newProxyInstance返回一个接口的代理实例。针对不同的代理类，传入相应的代理程序控制器InvocationHandler。
+
+```
+    public static void main(String[] args) {
+        System.getProperties().setProperty("sun.misc.ProxyGenerator.saveGeneratedFiles", "true");
+
+        HelloInterface hello = new Hello();
+        
+        InvocationHandler handler = new ProxyHandler(hello);
+
+        HelloInterface proxyHello = (HelloInterface) Proxy.newProxyInstance(hello.getClass().getClassLoader(), hello.getClass().getInterfaces(), handler);
+
+        proxyHello.sayHello();
+    }
+    输出：
+    Before invoke sayHello
+    Hello zhanghao!
+    After invoke sayHello
+```
 
 编程题：
 
@@ -514,3 +564,22 @@ public class Main {
 }
 ```
 
+
+
+
+
+#### 字节电商后台-3-2
+
+1.项目中用微服务为什么拆的很小
+
+2.网络分层中网络层和传输层区别
+
+3.操作系统物理内存和虚拟内存
+
+4.堆和栈的区别
+
+5.算法题，求top k最大数
+
+​	TreeMap, 堆，排序
+
+6.算法题，求升序数组中target出现的次数
