--- a/Java Structures/102-实习面经.md
+++ b/Java Structures/102-实习面经.md
@@ -583,3 +583,39 @@ public class Main {
 ​	TreeMap, 堆，排序
 
 6.算法题，求升序数组中target出现的次数
+
+
+
+
+
+#### 字节抖音社交-3-16
+
+hashmap扩容和size方法如何解决线程安全问题
+
+volatile关键字及其原理
+
+Java常见锁机制，为什么要有多种锁
+
+加锁过程中虚拟机会做什么操作
+
+##### 算法1：
+
+单调递增的循环数组，返回最大值
+
+[6,8,10,2,3] -> 10
+
+##### 算法2：
+
+字典映射1->A 2->B ... 26->Z
+
+226 -> [BBF, VF, BZ]
+
+2->B 6 ->F
+22->V
+
+26-Z
+
+input ：给定的数字
+
+output：组合的个数
+
