--- a/Java Structures/102-实习面经.md
+++ b/Java Structures/102-实习面经.md
@@ -590,6 +590,8 @@ public class Main {
 
 #### 字节抖音社交-3-16
 
+一面：
+
 hashmap扩容和size方法如何解决线程安全问题
 
 volatile关键字及其原理
@@ -603,6 +605,36 @@ Java常见锁机制，为什么要有多种锁
 单调递增的循环数组，返回最大值
 
 [6,8,10,2,3] -> 10
+
+```
+import java.util.Scanner;
+public class Main {
+    public static void main(String[] args) {
+        int[] array = new int[]{2,1};
+        System.out.println(findMaxNum(array));
+    }
+    
+    public static int findMaxNum(int[] array){
+        int i = 0, j = array.length -1;
+        if (j == 0) return -1;
+        int middle = (i+j)/2;
+        if (array[middle] < array[j]) return array[j];
+        while(i<j){
+            int m = (i+j)/2;
+            if (array[m]>array[j]){
+                i = m + 1;
+            } else if (array[m] < array[j]){
+                j = m;
+            } else {
+                j--;
+            }
+        }
+       return array[i-1];
+    }
+}
+```
+
+
 
 ##### 算法2：
 
@@ -618,4 +650,143 @@ Java常见锁机制，为什么要有多种锁
 input ：给定的数字
 
 output：组合的个数
+
+
+
+二面：
+
+西电学长
+
+业务上主要做什么？
+
+微服务拆分为什么要比较细，会有什么问题？
+
+业务场景数据库落地是怎么做的？
+
+平时维护老服务主要是做什么？
+
+**算法1：**
+
+蛇形遍历二叉树
+
+​      1
+
+   2     3
+
+ 4   5
+
+6 7
+
+1 32 45 76
+
+```
+import java.util.Scanner;
+import java.util.*;
+public class Main {
+    public static void main(String[] args) {
+        TreeNode root = new TreeNode(1);
+        root.left = new TreeNode(2);
+        root.right = new TreeNode(3);
+        root.left.left = new TreeNode(4);
+        root.left.right = new TreeNode(5);
+        System.out.println(snakeOrder(root));
+    }
+    
+    public static List<List<Integer>> snakeOrder(TreeNode root){
+        if (null == root) {
+            return new ArrayList<>();
+        }
+        
+        List<List<Integer>> result = new ArrayList<>();
+        List<TreeNode> records = new ArrayList<>();
+        records.add(root);
+        
+        int direction = 1;
+        while (!records.isEmpty()){
+            List<Integer> subResult = new ArrayList<>();
+            List<TreeNode> childs = new ArrayList<>();
+            for(TreeNode node:records){
+                if (node.left != null){
+                    childs.add(node.left);
+                }
+                if (node.right != null){
+                    childs.add(node.right);
+                }
+            }
+            if (direction == 1){
+                for(int i=0; i< records.size(); i++){
+                    subResult.add(records.get(i).val);
+                }
+                direction = 2;
+            } else if (direction == 2) {
+                for(int i=records.size()-1; i>=0; i--){
+                    subResult.add(records.get(i).val);
+                }
+                direction = 1;
+            }
+            result.add(subResult);
+            records = childs;
+        }
+        return result;
+    }
+}
+
+class TreeNode{
+    int val;
+    TreeNode left;
+    TreeNode right;
+    TreeNode(int x) {
+        val = x;
+    }
+}
+```
+
+**算法2：**
+
+全排列无序数组
+
+【1，2，3】
+
+输出
+
+123
+
+132
+
+213
+
+231
+
+312
+
+321
+
+```
+import java.util.*;
+public class Main {
+    public static void main(String[] args) {
+        int[] array = new int[]{1,2,3,4};
+        System.out.println(quanpailie(array));
+    }
+    public static List<List<Integer>> quanpailie(int[] array){
+        List<List<Integer>> result = new ArrayList<>();
+        result.add(new ArrayList<Integer>());
+        
+        for(int i=0; i<array.length; i++){
+            List<List<Integer>> current = new ArrayList<>();
+            for(List<Integer> l : result){
+                
+                for(int j = 0; j<l.size() + 1; j++){
+                    l.add(j, array[i]);
+                    List<Integer> tmp = new ArrayList<Integer>(l);
+                    current.add(tmp);
+                    l.remove(j);
+                }
+            }
+           result = new ArrayList<>(current);
+        }
+        return result;
+    }
+}
+```
 
