--- a/Java Structures/102-实习面经.md
+++ b/Java Structures/102-实习面经.md
@@ -638,6 +638,8 @@ public class Main {
 
 ##### 算法2：
 
+#### [91. 解码方法](https://leetcode-cn.com/problems/decode-ways/)
+
 字典映射1->A 2->B ... 26->Z
 
 226 -> [BBF, VF, BZ]
@@ -650,6 +652,89 @@ public class Main {
 input ：给定的数字
 
 output：组合的个数
+
+```
+// 递归+记忆
+public int numDecodings(String s) {
+    HashMap<Integer, Integer> memoization = new HashMap<>();
+    return getAns(s, 0, memoization);
+}
+
+private int getAns(String s, int start, HashMap<Integer, Integer> memoization) {
+    if (start == s.length()) {
+        return 1;
+    }
+    if (s.charAt(start) == '0') {
+        return 0;
+    }
+    //判断之前是否计算过
+    int m = memoization.getOrDefault(start, -1);
+    if (m != -1) {
+        return m;
+    }
+    int ans1 = getAns(s, start + 1, memoization);
+    int ans2 = 0;
+    if (start < s.length() - 1) {
+        int ten = (s.charAt(start) - '0') * 10;
+        int one = s.charAt(start + 1) - '0';
+        if (ten + one <= 26) {
+            ans2 = getAns(s, start + 2, memoization);
+        }
+    }
+    //将结果保存
+    memoization.put(start, ans1 + ans2);
+    return ans1 + ans2;
+}
+
+// 一维动态数组规划
+class Solution {
+    //状态定义：dp[i]为第i个位置解码方法的总数
+    public int numDecodings(String s) {
+        char[] chars = s.toCharArray();
+        if (chars[0] == '0') return 0;
+        int[] dp = new int[chars.length];
+        dp[0] = 1;
+        for (int i = 1; i < chars.length; i++) {
+            if (chars[i] == '0') {
+                //如果前一位不是1或者2,显然无法解码
+                if (chars[i - 1] != '1' && chars[i - 1] != '2') return 0;
+                //如果前一位是1或者2
+                dp[i] = i == 1 ? 1 : dp[i - 2];
+            } else if (chars[i - 1] == '1' || (chars[i - 1] == '2' && chars[i] >= '1' && chars[i] <= '6')) {
+                dp[i] = i == 1 ? dp[i - 1] + 1 : dp[i - 1] + dp[i - 2];
+            } else {
+                dp[i] = dp[i - 1];
+            }
+        }
+        return dp[chars.length - 1];
+    }
+}
+
+// 解法三：滚动数组优化
+class Solution {
+    public int numDecodings(String s) {
+        char[] chars = s.toCharArray();
+        if (chars[0] == '0') return 0;
+        int cur = 1, pre = 1;
+        for (int i = 1; i < chars.length; i++) {
+            int tmp = cur;
+            if (chars[i] == '0') {
+                //如果前一位不是1或者2,显然无法解码
+                if (chars[i - 1] != '1' && chars[i - 1] != '2') return 0;
+                //如果前一位是1或者2
+                cur = pre;
+            } else if (chars[i - 1] == '1' || (chars[i - 1] == '2' && chars[i] >= '1' && chars[i] <= '6')) {
+                cur = cur + pre;
+            } else {
+                //虽然此处没有意义，但是为了方便理解，等价O(n)空间复杂度的代码
+                cur = cur;
+            }
+            pre = tmp;
+        }
+        return cur;
+    }
+}
+```
 
 
 
@@ -788,5 +873,123 @@ public class Main {
         return result;
     }
 }
+```
+
+
+
+全排列递归法
+
+```
+public class Test {
+static int k=0;
+public static void main(String[] args) {
+  int a[]={1,2,3,4,5};
+  permutations(a,0,4);
+}
+public static void permutations(int[]a,int m,int n){
+  if(m==n){
+    k++;
+    System.out.print(k+"个:");
+    for(int i=0;i<=n;i++){
+      System.out.print(a[i]);
+    }
+    System.out.println();
+  }else{
+    for(int i=m;i<=n;i++){
+      int temp=a[m];
+      a[m]=a[i];
+      a[i]=temp; 
+      permutations(a,m+1,n);
+      temp=a[m];
+      a[m]=a[i];
+      a[i]=temp;
+    }
+  }
+}
+```
+
+
+
+#### 字节抖音音乐 3-23
+
+1.怎样做的服务监控与失效处理
+
+2.数据库事务
+
+3.zset底层实现
+
+4.算法
+
+全排列实现
+
+
+
+#### 字节抖音音乐 3-24
+
+1.Linux怎样模式匹配查找
+
+2.\\\\d+表示啥意思
+
+3.数据库索引建立，怎样挑最优索引
+
+4.
+
+算法：找最小会议室个数
+
+```
+// 最小堆算法。每当一个会议开始，我们就去检查在这个会议之前开始的会议的结束时间的最小值，到这里，你应该能想到堆这个数据结构，没错，我们可以维护一个最小堆用于记录结束时间，这样可以保证整个解的时间复杂度是 O(nlogn) 的。
+
+public int minMeetingRooms(int[][] intervals) {
+    if (intervals == null || intervals.length == 0) {
+        return 0;
+    }
+ 
+    Arrays.sort(intervals, (int[] a, int[] b) -> (a[0] - b[0]));
+ 
+    PriorityQueue<Integer> pq = new PriorityQueue<>();
+ 
+    pq.offer(intervals[0][1]);
+ 
+    for (int i = 1; i < intervals.length; ++i) {
+        if (pq.peek() <= intervals[i][0]) {
+            pq.poll();
+        }
+ 
+        pq.offer(intervals[i][1]);
+    }
+ 
+    return pq.size();
+}
+
+// 另外还有一种解法也是比较巧妙，没有用到什么特别的数据结构。这种解法是将所有会议的起始时间和终止时间拆分开来形成两个数组，分别排序，遍历起始时间数组，然后看终止时间数组中是否有结束的会议，记录即可。整个时间复杂度也是 O(nlogn) 的。
+public int minMeetingRooms(int[][] intervals) {
+    if (intervals == null || intervals.length == 0) {
+        return 0;
+    }
+ 
+    int n = intervals.length;
+ 
+    int[] start = new int[n];
+    int[] end = new int[n];
+ 
+    for (int i = 0; i < n; ++i) {
+        start[i] = intervals[i][0];
+        end[i] = intervals[i][1];
+    }
+ 
+    Arrays.sort(start);
+    Arrays.sort(end);
+ 
+    int s = 0, e = 0;
+    for (; s < n; s++) {
+        if (end[e] <= start[s]) {
+            e++;
+        }
+    }
+ 
+    return s - e;
+}
+
+// 贪心算法。
 ```
 
